--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,76 +1,26 @@
-/* Space out content a bit */
-
+[ng\: cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+    display: none;
+}
 body {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 70px;
 }
-/* Everything but the jumbotron gets side spacing for mobile first views */
-
-.header,
-.marketing,
-.footer {
-    padding-left: 15px;
-    padding-right: 15px;
+#cover {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: white;
 }
-/* Custom page header */
-
-.header {
-    border-bottom: 1px solid #e5e5e5;
+#userInfo {
+    float: right;
+    padding: 8px;
 }
-/* Make the masthead heading the same height as the navigation */
-
-.header h3 {
-    margin-top: 0;
-    margin-bottom: 0;
-    line-height: 40px;
-    padding-bottom: 19px;
+#vc-navbar {
+    padding-right: 2%;
 }
-/* Custom page footer */
-
-.footer {
-    padding-top: 19px;
-    color: #777;
-    border-top: 1px solid #e5e5e5;
-}
-/* Customize container */
-
-@media (min-width: 768px) {
-    .container {
-        max-width: 730px;
-    }
-}
-.container-narrow > hr {
-    margin: 30px 0;
-}
-/* Main marketing message and sign up button */
-
-.jumbotron {
-    text-align: center;
-    border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-}
-/* Supporting marketing content */
-
-.marketing {
-    margin: 40px 0;
-}
-.marketing p + h4 {
-    margin-top: 28px;
-}
-/* Responsive: Portrait tablets and up */
-
-@media screen and (min-width: 768px) {
-    .header, .marketing, .footer {
-        padding-left: 0;
-        padding-right: 0;
-    }
-    .header {
-        margin-bottom: 30px;
-    }
-    .jumbotron {
-        border-bottom: 0;
-    }
+#alertBox {
+    position: fixed;
+    min-width: 75%;
+    left: 50%;
+    margin: 0 0 0 -37.5%;
+    top: 80px;
 }
