--- a/app/views/partials/navbar.jade
+++ b/app/views/partials/navbar.jade
@@ -1,11 +1,27 @@
-.header(ng-controller='NavbarCtrl')
-  ul.nav.nav-pills.pull-right
-    li(ng-repeat='item in menu', ng-class='{active: isActive(item.link)}')
-      a(ng-href='{{item.link}}') {{item.title}}
-    li(ng-hide='currentUser', ng-class='{active: isActive("/login")}')
-      a(href='/login') Login
-    li(ng-hide='currentUser', ng-class='{active: isActive("/signup")}')
-      a(href='/signup') Sign up
-    li(ng-show='currentUser', ng-class='{active: isActive("/logout")}')
-      a(href='', ng-click='logout()') Logout
-  h3.text-muted vc
+.navbar.navbar-default.navbar-fixed-top(role='navigation',data-ng-controller="NavbarCtrl")
+    .container-fluid
+        .navbar-header
+            .navbar-brand Volunteer Computing
+        #vc-navbar.collapse.navbar-collapse
+            ul.nav.navbar-nav
+                li(data-access-level='accessLevels.user', active-nav)
+                    a(href='/') Home
+                li(data-access-level='accessLevels.user', active-nav)
+                    a(href='/newjob') New Job
+                li(data-access-level='accessLevels.user', active-nav)
+                    a(href='/jobs') Jobs Status
+                li(data-access-level='accessLevels.admin', active-nav)
+                    a(href='/userlist') User List
+            ul.nav.navbar-nav.navbar-right
+                li(data-access-level='accessLevels.anon', active-nav)
+                    a(href='/login') Log in
+                li(data-access-level='accessLevels.anon', active-nav)
+                    a(href='/register') Register
+                li.dropdown(data-access-level='accessLevels.user')
+                    a(href='#',data-toggle='dropdown')
+                        | {{ user.username }}
+                    ul.dropdown-menu
+                        li(data-access-level='accessLevels.user')
+                            a(href="", data-ng-click="logout()")
+                                | Log out
+
