--- a/app/views/partials/login.jade
+++ b/app/views/partials/login.jade
@@ -9,19 +9,19 @@
             | /
             code test
     .col-sm-6
-        form.form(name='form', ng-submit='login(form)', novalidate='novalidate')
+        form.form(name='form', ng-submit='login(form)')
             .form-group
                 label Email
                 input.form-control(type='text', name='email', ng-model='email')
             .form-group
                 label Password
                 input.form-control(type='password', name='password', ng-model='password')
-            .form-group.has-error
-                p.help-block(ng-show='form.email.$error.required && form.password.$error.required && submitted')
-                    | Please enter your email and password.
-                p.help-block {{ errors.other }}
-            button.btn.btn-lg.btn-primary(type='submit') Sign in
-            span.clearfix
+            .row
+                button.btn.btn-lg.btn-primary(type='submit') Sign in
+                .div
+                p.label.label-danger(ng-show='errors')
+                    | {{errors.message}}
+                span.clearfix
 .row
     .col-sm-6
         hr
