--- a/app/views/partials/register.jade
+++ b/app/views/partials/register.jade
@@ -3,30 +3,25 @@
     h1 Sign up
     
   .col-sm-6
-    form.form(name='form', ng-submit='register(form)', novalidate='')
-      .form-group(ng-class='{ \'has-success\': form.name.$valid && submitted, \'has-error\': form.name.$invalid && submitted }')
+    form.form(name='form', ng-submit='register(form)')
+      .form-group
         label Name
-        input.form-control(type='text', name='name', ng-model='name', required='')
-        p.help-block(ng-show='form.name.$error.required && submitted')
-          | A name is required
+        input.form-control(type='text', name='name', ng-model='name')
+        p.label.label-danger(ng-show='errors.name')
+          | {{errors.name.message}}
 
-      .form-group(ng-class='{ \'has-success\': form.email.$valid && submitted, \'has-error\': form.email.$invalid && submitted }')
+      .form-group
         label Email
-        input.form-control(type='email', name='email', ng-model='email', required='', mongoose-error='')
-        p.help-block(ng-show='form.email.$error.email && submitted')
-          | Doesn't look like a valid email.
-        p.help-block(ng-show='form.email.$error.required && submitted')
-          | What's your email address?
-        p.help-block(ng-show='form.email.$error.mongoose')
-          | {{ errors.email }}
+        input.form-control(type='text', name='email', ng-model='email')
+        p.label.label-danger(ng-show='errors.email')
+          | {{errors.email.message}}
 
-      .form-group(ng-class='{ \'has-success\': form.password.$valid && submitted, \'has-error\': form.password.$invalid && submitted }')
+      .form-group
         label Password
-        input.form-control(type='password', name='password', ng-model='password', ng-minlength='3', required='', mongoose-error='')
-        p.help-block(ng-show='(form.password.$error.minlength || form.password.$error.required) && submitted')
-          | Password must be at least 3 characters.
-        p.help-block(ng-show='form.password.$error.mongoose')
-          | {{ errors.password }}
+        input.form-control(type='password', name='password', ng-model='password')
+        p.label.label-danger(ng-show='errors.hashedPassword')
+          | {{errors.hashedPassword.message}}
+
 
       button.btn.btn-lg.btn-primary(type='submit') Sign up
 .row
