UI: adding jobs, WIP

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -38,7 +38,13 @@ html.no-js
     script(src='scripts/controllers/login.js')
     script(src='scripts/controllers/register.js')
     script(src='scripts/controllers/jobs.js')
+    script(src='scripts/controllers/settings.js')
+    script(src='scripts/controllers/addjob.js')
     script(src='scripts/services/auth.js')
+    script(src='scripts/services/session.js')
+    script(src='scripts/services/user.js')
+    script(src='scripts/services/addJob.js')
+    script(src='scripts/directives/mongooseError.js')
     script(src='scripts/directives/activeNav.js')
     script(src='scripts/directives/accessLevel.js')
     // endbuild
