--- a/app/views/partials/user/newjob.jade
+++ b/app/views/partials/user/newjob.jade
@@ -1,1 +1,16 @@
-h1 Strona do zlecania nowch jobow
+.row
+    .col-sm-6
+        h1 Strona do zlecania nowch jobow
+    .col-sm-6
+        form.form(name='form', ng-submit='addJob(form)')
+            .form-group
+                .row
+                    label Input data
+                .row
+                    textarea(name='data', ng-model='data')
+            .row
+                button.btn.btn-lg.btn-primary(type='submit') Add job
+                .div
+                p.label.label-danger(ng-show='errors')
+                    | {{errors.message}}
+                span.clearfix
