Imprement communication client- server to send user JSON

--- a/app/views/partials/user/jobs.jade
+++ b/app/views/partials/user/jobs.jade
@@ -1,1 +1,6 @@
 h1 Strona ze statusem jobow
+    h2 Client {{user.username}} has following Jobs
+
+    //h2  {{jobs}}
+    for job in {{jobs}}
+        p #{job}
