--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -35,6 +35,7 @@ html.no-js
     script(src='scripts/controllers/navbar.js')
     script(src='scripts/controllers/login.js')
     script(src='scripts/controllers/register.js')
+    script(src='scripts/controllers/jobs.js')
     script(src='scripts/services/auth.js')
     script(src='scripts/directives/activeNav.js')
     script(src='scripts/directives/accessLevel.js')
