--- a/app/styles/jobs.css
+++ b/app/styles/jobs.css
@@ -1,11 +1,23 @@
+#leftBox {
+    float:left;
+    width: 60%;
+}
+
+#rightBox {
+    float:right;
+    width: 40%;
+}
+#mar{
+    margin-top:20px;
+    margin-bottom:20px;
+    margin-right:15px;
+    margin-left:15px;
+}
 #test
 {
     border: 4px #1e458a dashed;
-
     background-color: #e5edfa;
-
     padding: 18px;
-
     color: #002157;
     font-size: inherit;
     font-weight: inherit;
@@ -15,8 +27,59 @@
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
     border-radius: 8px;
-
+    height: 200px;
     -moz-box-shadow: 0px 0px 10px 0px #333333;
     -webkit-box-shadow: 0px 0px 10px 0px #333333;
     box-shadow: 0px 0px 10px 0px #333333;
+}
+
+
+.box h4{
+    text-align:center;
+    margin: 10px;
+    position:relative;
+}
+.box {
+    width:40%;
+    height:auto;
+    background:#FFF;
+    margin: 20px;
+}
+
+/*==================================================
+ * Effect 7
+ * ===============================================*/
+.effect7
+{
+    position:relative;
+    -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    margin: auto;
+
+}
+.effect7:before, .effect7:after
+{
+    content:"";
+    position:absolute;
+    z-index:-1;
+    -webkit-box-shadow:0 0 20px rgba(0,0,0,0.8);
+    -moz-box-shadow:0 0 20px rgba(0,0,0,0.8);
+    box-shadow:0 0 20px rgba(0,0,0,0.8);
+    top:0;
+    bottom:0;
+    left:10px;
+    right:10px;
+    -moz-border-radius:100px / 10px;
+    border-radius:100px / 10px;
+}
+.effect7:after
+{
+    right:auto;
+    left:auto;
+    -webkit-transform:skew(8deg) rotate(3deg);
+    -moz-transform:skew(8deg) rotate(3deg);
+    -ms-transform:skew(8deg) rotate(3deg);
+    -o-transform:skew(8deg) rotate(3deg);
+    transform:skew(8deg) rotate(3deg);
 }
