add field of finished tasks

--- a/app/views/partials/user/jobs.jade
+++ b/app/views/partials/user/jobs.jade
@@ -10,6 +10,9 @@ h1 Client {{user.username}} has created following Jobs
                 dd
                     h4
                         b status: {{job.status}}
+                dd
+                    h4
+                        b finished: [{{job.finished}} / {{job.allTasks}}]
             #rightBox
                 #mar
                 .box.effect7
