Add user-side job input data validation

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -15,6 +15,7 @@ html.no-js
     // build:css({.tmp,app}) styles/main.css
     link(rel='stylesheet', href='styles/main.css')
     link(rel='stylesheet', href='styles/jobs.css')
+    link(rel='stylesheet', href='styles/newjob.css')
     // endbuild
 
   body(ng-app="vcApp")
