#7 simple persistance of a commissioned job

--- a/app/views/partials/user/newjob.jade
+++ b/app/views/partials/user/newjob.jade
@@ -1,11 +1,11 @@
 .row
     .col-sm-6
-        h1 Strona do zlecania nowch jobow
+        h1 Serwis do zlecania nowych jobow
     .col-sm-6
         form.form(name='form', ng-submit='addJob(form)')
             .form-group
                 .row
-                    label Input data
+                    label Wprowadz zakres postaci: a,b (np: 4,14)
                 .row
                     textarea(name='data', ng-model='data')
             .row
