\#7 data object persisted in a new job
Conflicts:
	lib/controllers/addJob.js

--- a/app/views/partials/user/newjob.jade
+++ b/app/views/partials/user/newjob.jade
@@ -4,7 +4,7 @@ br
 form.form(name='form', ng-submit='addJob(form)')
     .form-group
         .row
-            label Input data (range, e.g. 4,14)
+            label Input data (range as JSON array, e.g. [4,14])
         .row
             textarea.job-data(name='data', ng-model='data')
     .row
