add data to job

--- a/app/views/partials/user/jobs.jade
+++ b/app/views/partials/user/jobs.jade
@@ -13,6 +13,9 @@ h1 Client {{user.username}} has created following Jobs
                 dd
                     h4
                         b finished: [{{job.finished}} / {{job.allTasks}}]
+                dd
+                    h4
+                        b data for job: {{job.data}}
             #rightBox
                 #mar
                 .box.effect7
