Display job result in /jobs/

--- a/app/views/partials/user/jobs.jade
+++ b/app/views/partials/user/jobs.jade
@@ -15,6 +15,9 @@ h1 Client {{user.username}} has created following Jobs
                         b finished: [{{job.finished}} / {{job.allTasks}}]
                 dd
                     h4
+                        b result: {{job.result}}
+                dd
+                    h4
                         b data for job: {{job.data}}
             #rightBox
                 #mar
