--- a/app/views/partials/register.jade
+++ b/app/views/partials/register.jade
@@ -1,31 +1,34 @@
 .row
-  .col-sm-6
-    h1 Sign up
-    
-  .col-sm-6
-    form.form(name='form', ng-submit='register(form)')
-      .form-group
-        label Name
-        input.form-control(type='text', name='name', ng-model='name')
-        p.label.label-danger(ng-show='errors.name')
-          | {{errors.name.message}}
+    .col-sm-6
+        h1 Sign up
+    .col-sm-6
+        form.form(name='form', ng-submit='register(form)')
+            .form-group
+                label Name
+                input.form-control(type='text', name='name', ng-model='name', ng-minlength="3", ng-maxlength="8", required)
+                p.label.label-danger(ng-show='form.name.$error.minlength && !form.name.$pristine')
+                    | {{errors.name.message}} Username is too short
+                p.label.label-danger(ng-show='form.name.$error.maxlength && !form.name.$pristine')
+                    | {{errors.name.message}} Username is too long
 
-      .form-group
-        label Email
-        input.form-control(type='text', name='email', ng-model='email')
-        p.label.label-danger(ng-show='errors.email')
-          | {{errors.email.message}}
+            .form-group
+                label Email
+                input.form-control(type='email', name='email', ng-model='email', required)
+                p.label.label-danger(ng-show='form.email.$invalid && !form.email.$pristine')
+                    | {{errors.name.message}} Enter a valid email
 
-      .form-group
-        label Password
-        input.form-control(type='password', name='password', ng-model='password')
-        p.label.label-danger(ng-show='errors.hashedPassword')
-          | {{errors.hashedPassword.message}}
+            .form-group
+                label Password
+                input.form-control(type='password', name='password', ng-model='password', ng-minlength="3", required)
+                p.label.label-danger(ng-show='errors.hashedPassword')
+                    | {{errors.hashedPassword.message}}
+                p.label.label-danger(ng-show='form.password.$error.minlength && !form.password.$pristine')
+                    | {{errors.name.message}} Password is too short
 
 
-      button.btn.btn-lg.btn-primary(type='submit') Sign up
+            button.btn.btn-lg.btn-primary(type='submit', ng-disabled="form.$invalid") Sign up
 .row
-  .col-sm-12
-    hr
-    | Have an account? 
-    a.text-center.new-account(href='/login') Log in.
+    .col-sm-12
+        hr
+        | Have an account?
+        a.text-center.new-account(href='/login') Log in.
