--- a/app/views/partials/login.jade
+++ b/app/views/partials/login.jade
@@ -12,12 +12,16 @@
         form.form(name='form', ng-submit='login(form)')
             .form-group
                 label Email
-                input.form-control(type='text', name='email', ng-model='email')
+                input.form-control(type='email', name='email', ng-model='email', required)
+                p.label.label-danger(ng-show='form.email.$invalid && !form.email.$pristine')
+                    | {{errors.name.message}} Enter a valid email
             .form-group
                 label Password
-                input.form-control(type='password', name='password', ng-model='password')
+                input.form-control(type='password', name='password', ng-model='password', ng-minlength="1", required)
+                p.label.label-danger(ng-show='errors.hashedPassword')
+                    | {{errors.hashedPassword.message}}
             .row
-                button.btn.btn-lg.btn-primary(type='submit') Sign in
+                button.btn.btn-lg.btn-primary(type='submit', ng-disabled="form.$invalid") Sign up
                 .div
                 p.label.label-danger(ng-show='errors')
                     | {{errors.message}}
@@ -26,4 +30,4 @@
     .col-sm-6
         hr
         | Not registered?
-        a.text-center.new-account(href='/register') Create an account.
+        a.text-center.new-account(href='/register')  Create an account.
