Add module to client side task execution

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -41,7 +41,9 @@ html.no-js
     script(src='scripts/controllers/jobs.js')
     script(src='scripts/controllers/settings.js')
     script(src='scripts/controllers/addjob.js')
+    script(src='scripts/controllers/job_execution.js')
     script(src='scripts/services/auth.js')
+    script(src='scripts/services/slave.js')
     script(src='scripts/services/session.js')
     script(src='scripts/services/user.js')
     script(src='scripts/services/addJob.js')
