Slave wating for new tasks, send results

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -30,6 +30,7 @@ html.no-js
     script(src='bower_components/angular-cookies/angular-cookies.js')
     script(src='bower_components/angular-sanitize/angular-sanitize.js')
     script(src='bower_components/angular-ui-router/release/angular-ui-router.js')
+    script(src='bower_components/socket.io-client/dist/socket.io.min.js')
     // endbower
     // build:js({.tmp,app}) scripts/scripts.js
     script(src='scripts/routingConfig.js')
