--- a/app/styles/newjob.css
+++ b/app/styles/newjob.css
@@ -1,8 +1,8 @@
-textarea.job-data {
-    min-width: 100%;
-    max-width: 100%;
-    height: 100%;
-    min-height: 200px;
-    font-family: 'monospace';
-}
+/*textarea.job-data {*/
+    /*min-width: 100%;*/
+    /*max-width: 100%;*/
+    /*height: 100%;*/
+    /*min-height: 200px;*/
+    /*font-family: 'monospace';*/
+/*}*/
 
