--- a/app/views/partials/navbar.jade
+++ b/app/views/partials/navbar.jade
@@ -1,8 +1,13 @@
-.navbar.navbar-default.navbar-fixed-top(role='navigation',data-ng-controller="NavbarCtrl")
+#vc-nav.navbar.navbar-default.navbar-static-top(role='navigation',data-ng-controller="NavbarCtrl")
     .container-fluid
         .navbar-header
-            .navbar-brand Volunteer Computing
-        #vc-navbar.collapse.navbar-collapse
+            button.navbar-toggle(data-target='#vc-navbar-collapse', data-toggle='collapse', type='button')
+                span.sr-only Toggle navigation
+                span.icon-bar
+                span.icon-bar
+                span.icon-bar
+            a.navbar-brand Volunteer Computing
+        #vc-navbar-collapse.collapse.navbar-collapse
             ul.nav.navbar-nav
                 li(data-access-level='accessLevels.user', active-nav)
                     a(href='/') Home
