--- a/app/views/partials/user/newjob.jade
+++ b/app/views/partials/user/newjob.jade
@@ -1,23 +1,23 @@
 h1 Add a new job
-form.form-horizontal(name='form', role='form', ng-submit='addJob()')
+form.form-horizontal(name='form', role='form', ng-submit='addJob(form)')
     .form-group
         ol
             li
                 h4 Select function
                 select(ng-model='selectedFunction')
                     option(ng-repeat='function in functions') {{function}}
-                p(ng-if='selectedFunction') Description of selected function
-            li(ng-if='selectedFunction')
+                p(ng-show='selectedFunction') Description of selected function
+            li(ng-show='selectedFunction')
                 h4 Enter arguments
                 p Interval:
                 .form-group
                     label.col-sm-2.control-label Beginning:
                     .col-sm-2
-                        input.form-control(type='number', name='beginning', ng-model='beginning', required)
+                        input.form-control(type='number', name='start', ng-model='start', required)
                 .form-group
                     label.col-sm-2.control-label Ending:
                     .col-sm-2
-                        input.form-control(type='number', name='ending', ng-model='ending', required)
+                        input.form-control(type='number', name='stop', ng-model='stop', required)
 
 
                 button.btn.btn-lg.btn-primary(type='submit') Add job
