--- a/app/views/partials/user/jobs.jade
+++ b/app/views/partials/user/jobs.jade
@@ -15,7 +15,11 @@ h1 Your jobs
                 .row
                     p.col-md-3
                         strong Status:
-                    p.col-md-9 {{job.status}}
+                        p.col-md-9 {{job.status}}
+                .row(ng-show='job.status == "completed"')
+                    p.col-md-3
+                        strong Result:
+                        p.col-md-9 {{job.result}}
                 .row
                 .row
                     p.col-md-3
