--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -25,6 +25,8 @@ html.no-js
     script(src='bower_components/jquery/dist/jquery.js')
     script(src='bower_components/angular/angular.js')
     script(src='bower_components/bootstrap/dist/js/bootstrap.js')
+    script(src='bower_components/angular-bootstrap/ui-bootstrap.js')
+    script(src='bower_components/angular-bootstrap/ui-bootstrap-tpls.js')
     script(src='bower_components/angular-resource/angular-resource.js')
     script(src='bower_components/angular-cookies/angular-cookies.js')
     script(src='bower_components/angular-sanitize/angular-sanitize.js')
