#43 #46 adding job moved to list, fixes with collapse

--- a/app/views/partials/navbar.jade
+++ b/app/views/partials/navbar.jade
@@ -12,9 +12,7 @@
                 li(data-access-level='accessLevels.user', active-nav)
                     a(href='/') Home
                 li(data-access-level='accessLevels.user', active-nav)
-                    a(href='/newjob') New Job
-                li(data-access-level='accessLevels.user', active-nav)
-                    a(href='/jobs') Jobs Status
+                    a(href='/jobs') Jobs
                 li(data-access-level='accessLevels.admin', active-nav)
                     a(href='/userlist') User List
             ul.nav.navbar-nav.navbar-right
