--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -13,13 +13,13 @@ body {
     max-width: 900px;
 }
 
-.panel-heading a:after {
+.panel-heading .panel-title:after {
     font-family: 'Glyphicons Halflings';
     content: "\e114";
     float: right;
     color: grey;
 }
-.panel-heading a.collapsed:after {
+.panel-heading.collapsed .panel-title:after {
     content: "\e080";
 }
 
